@@ -4,6 +4,5 @@ Makefile.PL
 t/000_tests.t
 t/950_pod.t
 t/960_pod_coverage.t
-t/990_kwalitee.t
 README
 Changes
