@@ -1,3 +1,6 @@
+Version
++ Removed Kwalitee tests
+
 Version 2009110401
 + Modernized Makefile.PL
 + Added POD and Kwalitee tests
